--- a/index.html
+++ b/index.html
@@ -85,20 +85,17 @@
 	</h2></div>
 	<div class="up op sec center"><h4>
 		・仮面ライダー<br>
-		ビルドが一番好きクローズエボル、グリスブリザード、ラビットラビット、<br>
+		ビルドが一番好き<br>
 	</div></h4>
 	<div class="up op sec center"><h4>
-		メタルクラスタ、ゼロツー、ハイパームテキ、ゼロノス、
-		ジンバーレモン、</h4></div><br>
-	<div class="up op sec center"><h4>
-		デッドヒート、エボルトとかが好きです。
-	</h4></div>
+		その中だとタンクタンクとかグリスブリザードとか
+　		が好き</h4></div><br>
 	<div class="border up op sec"></div>
 	<div class="up op sec center"><h2>
 		好きな物②
 	</h2></div>
 	<div class="up op sec center"><h4>
-		・ポケモン<br>グレイシア、レントラー、ナエトル辺りが好き<br>始めたのはダイパの時
+		・ポケモン<br>グレイシア、レントラー、ニャビー、ナエトル辺りが好き<br>始めたのはダイパの時
 	</h4></div>
 	<div class="border up op sec"></div>
 	<div class="up op sec center">
