--- a/index.html
+++ b/index.html
@@ -88,8 +88,7 @@
 		ビルドが一番好き<br>
 	</div></h4>
 	<div class="up op sec center"><h4>
-		その中だとタンクタンクとかグリスブリザードとか
-　		が好き</h4></div><br>
+		その中だとタンクタンクとかグリスブリザードとかが好き</h4></div><br>
 	<div class="border up op sec"></div>
 	<div class="up op sec center"><h2>
 		好きな物②
